--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.websitepipeline.edwardweeks.steamwhisperer" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +11,22 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
+            android:parentActivityName=".MainNav"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainNav"
+            android:label="@string/title_activity_main_nav" >
+        </activity>
+        <activity
+            android:parentActivityName=".MainNav"
+            android:name=".TestPage"
+            android:label="@string/title_activity_test_page" >
         </activity>
     </application>
 
